--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="frontend/script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello there. Click the button to get a random number!</h1>
+    <h3 id="randomNumber"></h3>
+    <button id="randomNumberButton"> Click Me </button> 
 </body>
 </html>
